[project]
name = "arxiv-researcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["arxiv>=2.3.1", "llama-index>=0.14.8", "python-dotenv>=1.2.1", "notebook>=7.5.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
